[CoordinatedGraphics] BitmapTexturePool does not release textures properly https://bugs.webkit.org/show_bug.cgi?id=172428

Reviewed by Žan Doberšek.

No new tests because no behavior change.

* platform/graphics/texmap/BitmapTexturePool.cpp:
(WebCore::BitmapTexturePool::BitmapTexturePool):
Use the RunLoopTimer instead of Timer, because BitmapTexturePool would
run on the compositing thread in Coordinated Graphics case.
(WebCore::BitmapTexturePool::releaseUnusedTexturesTimerFired):
We should check not only the last used time but also the refcounts of the
texture when selecting textures to remove.
* platform/graphics/texmap/BitmapTexturePool.h:
(WebCore::BitmapTexturePool::Entry::canBeReleased): Added.


Canonical link: https://commits.webkit.org/189339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217213 268f45cc-cd09-0410-ab3c-d52691b4dbfc